# python_research_enviroment

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/config/: config.py  config.yaml
